2013-01-14  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/55618
	* trans-expr.c (gfc_conv_procedure_call): Dereference scalar
	character function arguments to elemental procedures in
	scalarization loops.

2013-01-08  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/42769
	PR fortran/45836
	PR fortran/45900
	* module.c (read_module): Don't reuse local symtree if the associated
	symbol isn't exactly the one wanted.  Don't reuse local symtree if it is
	ambiguous.
	* resolve.c (resolve_call): Use symtree's name instead of symbol's to
	lookup the symtree.

2013-01-07  Steven G. Kargl  <kargl@gcc.gnu.org>
	    Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/55827
	* trans-expr.c (gfc_conv_function_expr): Init sym earlier. Use it.

2012-11-24  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/55314
	Backport from trunk
	* resolve.c (resolve_allocate_deallocate):  Compare all
	subscripts when deciding if to reject a (de)allocate
	statement.

2012-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54225
	PR fortran/53306
	* array.c (match_subscript, gfc_match_array_ref): Fix
	diagnostic of coarray's '*'.

2012-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54556
	* resolve.c (gfc_impure_variable): Don't check gfc_pure such
	that the function also works for gfc_implicit_pure procedures.

2012-09-12  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/54208
	* simplify.c (simplify_bound_dim): Resolve array spec before
	proceeding with simplification.

2012-07-14  Mikael Morin  <mikael@gcc.gnu.org>

	Backport from trunk:
	2012-01-09  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/51758
	* trans-array.c (gfc_walk_elemental_function_args):
	Skip over NULL() actual arguments.

2012-06-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53597
	* decl.c (match_attr_spec): Only mark module variables
	as SAVE_IMPLICIT for Fortran 2008 and later.

2012-06-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/50619
	* resolve.c (build_default_init_expr): Don't initialize