@@ -1,3 +1,9 @@
+2013-01-14  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55072
+	* gfortran.dg/internal_pack_13.f90: New test.
+	* gfortran.dg/internal_pack_14.f90: New test.
+
 2013-01-14  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/55618
